%%{init: {"theme":"base","themeVariables":{"fontFamily":"Inter, Segoe UI, Helvetica, Arial, sans-serif","fontSize":"13px","primaryTextColor":"#111827","lineColor":"#374151"}}}%%
%% Source: docs/05-api-and-data-contracts.md 3 (SQLite schema) + ADR-006 + NFR-SEC-001
%% + ADR-018 (tier/model split, upstream_class) + ADR-027 Amendment 1 (the step-5 stamp).
%% Claim: exactly one column may hold verbatim model output, and it is masked before it is written.
%% Claim: a tier name never masquerades as a model id, and the step-5 stamp is stored, not derived.
erDiagram
  audit_records {
    TEXT request_id PK "one record per request, append-only"
    TEXT ts_utc
    TEXT use_case "which pipeline"
    INTEGER policy_version "which YAML version judged it"
    TEXT conversation_id "nullable, enables conv_tracker"
    TEXT stage_summary "input | streamed | completed"
    TEXT verdict "CHECK: pass | edit | block | escalate"
    TEXT signals_json "list[Signal] - evidence fields only, NO raw PII. PURE Signals"
    TEXT detector_failures_json "ADR-027: list[DetectorFailureRecord] - operational events, never Signals. No span/plane/label/text"
    TEXT contributing_signal_ids "04 section 4.3 step-5 stamp: which signals drove the verdict. [] not NULL when none"
    TEXT failure_record_ids "04 section 4.3 step-5 stamp: which faults forced a floor. STORED, never derived"
    TEXT actions_json "transforms applied, spans, fallback used"
    TEXT tier_requested "CHECK: small | frontier - the routing decision, pre-dispatch"
    TEXT model_used "the CONCRETE provider model id that answered - never a tier name"
    TEXT upstream_class "CHECK: dev | measured - ADR-018 provenance travels with the row"
    INTEGER cascade_escalated "probe rejected, went frontier"
    INTEGER tokens_in
    INTEGER tokens_out
    REAL est_cost_usd
    TEXT latency_json "per-detector ms + total_attributable_overhead_ms + upstream_ms + ADR-030 series"
    INTEGER sampled_deep "was it handed to the deep lane"
  }

  review_items {
    TEXT review_id PK
    TEXT request_id FK "lineage back to the audit record"
    TEXT ts_created
    TEXT quarantined_text "THE ONLY verbatim output column - PII masked at write time"
    TEXT status "CHECK: pending | approved | rejected"
    TEXT decision_ts "nullable until reviewed"
    TEXT reviewer_note "nullable - the override rationale"
  }

  deep_audit_results {
    TEXT request_id FK "enriches, never alters the verdict"
    TEXT ts
    TEXT method "semantic_entropy | fairness_spot"
    TEXT result_json "clusters, entropy value, or check outcome"
  }

  metrics_events {
    TEXT ts
    TEXT name "fixed vocabulary from 05 section 5"
    REAL value
    TEXT labels_json "use_case, verdict, detector, category"
  }

  cost_ledger {
    TEXT use_case PK "composite key with month"
    TEXT month PK
    REAL spent_usd "read pre-dispatch by cost_budget"
  }

  audit_records ||--o| review_items : "ESCALATE creates one"
  audit_records ||--o{ deep_audit_results : "if sampled_deep"
  audit_records ||--o{ metrics_events : "emits"
  audit_records }o--|| cost_ledger : "debits monthly spend"
